--- a/package.json
+++ b/package.json
@@ -8,20 +8,21 @@
     "open:src": "babel-node tools/srcServer.js",
     "lint": "esw webpack.config.* src tools",
     "lint:watch": "npm run lint -- --watch",
-    "test": "mocha --reporter progress tools/testSetup.js \"src/**/*.test.js\"",
+    "test": "mocha --reporter spec tools/testSetup.js \"src/**/*.test.js\"",
     "test:watch": "npm run test -- --watch"
   },
   "author": "Cory House",
   "license": "MIT",
   "dependencies": {
     "babel-polyfill": "6.8.0",
+    "babel-preset-stage-2": "^6.24.1",
     "bootstrap": "3.3.6",
     "jquery": "2.2.3",
     "prop-types": "^15.5.10",
     "react": "15.6.1",
     "react-dom": "15.6.1",
     "react-redux": "4.4.5",
-    "react-router": "2.4.0",
+    "react-router": "3.0.0",
     "react-router-redux": "4.0.4",
     "redux": "3.5.2",
     "redux-thunk": "2.0.1",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "babel-cli": "6.8.0",
     "babel-core": "6.8.0",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "6.2.4",
     "babel-plugin-react-display-name": "2.0.0",
     "babel-preset-es2015": "6.6.0",
@@ -56,7 +58,7 @@
     "nock": "8.0.0",
     "npm-run-all": "1.8.0",
     "open": "0.0.5",
-    "react-addons-test-utils": "15.0.2",
+    "react-addons-test-utils": "15.5.1",
     "redux-immutable-state-invariant": "1.2.3",
     "redux-mock-store": "1.0.2",
     "rimraf": "2.5.2",
